# protostan

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  compile-run.sh  dodo.py
proto/: CMakeLists.txt  array.proto  logger.proto  small-array.proto  stan-core.proto  stanc-grpc.proto  stanc.proto  writer.proto
protostan/: CMakeLists.txt  LICENSE
protostan/proto/: compile-grpc.proto  compile.proto  stan-core.proto
protostan/src/protostan/callbacks/: binary_proto_stream_logger.hpp  binary_proto_stream_writer.hpp
protostan/src/protostan/util/: rw_delimited_pb.hpp
protostan/src/test/: binary_proto_ostream_logger-test.cpp  binary_proto_ostream_writer-test.cpp  rw_delimited_pb-test.cpp
src/: CMakeLists.txt
src/cpp/lang/: compiler.hpp
src/cpp/proto/: stanc.pb.cc  stanc.pb.h
src/cpp/protostan/lang/: compiler.hpp
src/cpp/test/: stanc-test.cpp
src/protostan/callbacks/: binary_proto_stream_logger.hpp  binary_proto_stream_writer.hpp
src/protostan/interface_callbacks/writer/: binary_proto_stream_writer.hpp  jsonlines_stream_writer.hpp
src/protostan/lang/: compiler.hpp
src/protostan/util/: rw_delimited_pb.hpp
src/python/proto/: stanc_pb2.py
src/stan/proto/: compile-grpc.proto  sample.proto  stan-core.proto  stanc.proto
src/test/: CMakeLists.txt  binary_proto_filestream_writer-test.cpp  binary_proto_ostream_writer-test.cpp  binary_proto_stream_writer-test.cpp  compile-test.cpp  gtest-test.cpp  rw_delimited_pb-test.cpp  stanc-test.cpp
test/unit/: gtest-test
